--- a/StudentManager.Website/Views/Student/Edit.cshtml
+++ b/StudentManager.Website/Views/Student/Edit.cshtml
@@ -1,6 +1,16 @@
-﻿@*
+﻿@model Student
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-<h2>IGOTTAPOOP</h2>
+<h2>Edit</h2>
+<form method="post">
+    <label for="id">ID:</label>
+    <input type="number" name="id" value="@Model.Id"/>
+    <label for="name">NAME:</label>
+    <input type="text" name="name" value="@Model.Name" />
+    <label for="programId">PROGRAM ID:</label>
+    <input type="number" name="programID" value="@Model.Program.Id" />
+    <button type="submit">Submit</button>
+</form>
