--- a/StudentManager.Website/Views/Student/Index.cshtml
+++ b/StudentManager.Website/Views/Student/Index.cshtml
@@ -4,7 +4,7 @@
 *@
 @{
 }
-<form  method="get">
+<form asp-action="Index" method="get">
     <div class="form-group">
         <div class="input-group">
             <input type="search" class="form-control" value="" name="searchTerm" />
@@ -38,7 +38,9 @@
     <td>
         @item.Program.Name
     </td>
-    
+    <td>
+        <a asp-controller="Student" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+    </td>
 </tr>
             }
 </table>
