--- a/StudentManager.Website/Views/Student/Index.cshtml
+++ b/StudentManager.Website/Views/Student/Index.cshtml
@@ -24,6 +24,9 @@
             <td>
                 PROGRAM
             </td>
+            <td>
+                <a asp-controller="Student" asp-action="Create" class="btn btn-primary">Create New Student</a>
+            </td>
         </tr>
     </thead>
     @foreach(var item in Model)
