--- a/StudentManager.Website/Views/Student/Create.cshtml
+++ b/StudentManager.Website/Views/Student/Create.cshtml
@@ -1,9 +1,16 @@
-﻿@model ISchool
+﻿
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-<form asp-action="Create">
-    
+<h2>Create</h2>
+<form method="post">
+    <label for="id">ID:</label>
+    <input type="number" name="id" />
+    <label for="name">NAME:</label>
+    <input type="text" name="name" />
+    <label for="programId">PROGRAM ID:</label>
+    <input type="number" name="programID" />
+    <button type="submit">Submit</button>
 </form>
