--- a/StudentManager.Website/Views/Student/Delete.cshtml
+++ b/StudentManager.Website/Views/Student/Delete.cshtml
@@ -1,5 +1,8 @@
-﻿@*
+﻿@model Student 
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
+<h1 class="text-center">@Model.Name was deleted.</h1>
+<a asp-controller="Student" asp-action="Index" class="btn btn-primary">Okay</a>
